--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,7 @@
 <h1>This is the page explainng our website </h1>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam eum asperiores eaque libero iusto reprehenderit adipisci blanditiis quas quidem, similique error sit nihil, voluptate mollitia, magni corporis est facilis illum?</p>
+
+
+<ul>
+  <li> <%= link_to "Home", root_path %> </li>
+</ul>
