--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,11 @@
-<h1>contact us </h1>
+<h1>Contact us </h1>
+
+<ul>
+  <% @members.each do |name| %>
+   <li> <%= name %></li>
+  <% end %>
+</ul>
+
+<ul>
+  <li> <%= link_to "Home", root_path %> </li>
+</ul>
