--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,23 +1,30 @@
-.navbar {
-  justify-content: space-between;
-  padding: 16px;
-  background: #F4F4F4;
-  display: flex;
-  align-items: center;
-  height: 100px;
+// .navbar {
+//   justify-content: space-between;
+//   padding: 16px;
+//   background: #F4F4F4;
+//   display: flex;
+//   align-items: center;
+//   height: 100px;
 
-}
+// }
 
 .navbar-lewagon {
   justify-content: space-between;
+  background-color: transparent;
+  transition: 0.5s background-color ease;
+  // padding: 16px;
+  // height: 100px;
 }
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
+  padding: 10px;
 
 }
-
 .navbar-lewagon .navbar-brand img {
   width: 40px;
-}
 
+}
+.navbar-lewagon-white {
+  background-color: white;
+}
