navbar with ease

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,6 @@
 
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
+<div class="container-nav
+">   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon fixed-top">
   <%= link_to "#", class: "navbar-brand" do %>
     <%= image_tag "" %>
     <% end %>
@@ -29,4 +30,5 @@
       </li>
     </ul>
   </div>
+</div>
 </div>
