--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,24 +1,29 @@
-// .navbar {
-//   justify-content: space-between;
-//   padding: 16px;
-//   background: #F4F4F4;
-//   display: flex;
-//   align-items: center;
-//   height: 100px;
+.navbar-lewagon  {
+justify-content: flex-end;
+    padding: 20px;
 
-// }
+    border-bottom: 1.5px solid #6886c5;
+    position: fixed;
+    transition-property: top;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+    top: 0;
+    z-index: 1000;
+    // background-color: #f9f9f9;
+    width: 100%;
+    color: white;
+    text-decoration: bold;
 
-.navbar-lewagon {
-  justify-content: space-between;
-  background-color: transparent;
-  transition: 0.5s background-color ease;
-  // padding: 16px;
-  // height: 100px;
 }
+
+.nav-link{
+  color: white;
+}
+
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
-  padding: 10px;
 
 }
 .navbar-lewagon .navbar-brand img {
@@ -27,4 +32,19 @@
 }
 .navbar-lewagon-white {
   background-color: white;
+  transition: 0.5s background-color ease;
+  color:grey;
+
+
+
 }
+
+.fixed-top {
+    position: fixed!important;
+
+//     z-index: 1030;
+//       background-color: transparent!important;
+
+//       transition: 0.5s background-color ease;
+
+  }
