--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -9,3 +9,39 @@
 <ul>
   <li> <%= link_to "Home", root_path %> </li>
 </ul>
+
+<!-- <div class="container-forms">
+  <div class="background-log-in" style="background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 0, #fff 100%), url(https://images.unsplash.com/photo-1554400928-c233e2fc4d7a?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2775&amp;q=80);">
+      </div>
+
+  <div class="col-lg-4 col-md-8 col-sm-10">
+    <div class="container-signup">
+
+      <h2>Log in</h2>
+
+      <form class="simple_form new_user" id="new_user" novalidate="novalidate" action="/users/sign_in" accept-charset="UTF-8" method="post"><input type="hidden" name="authenticity_token" value="SwtEG8zbTSGWBz0XIU044YG7frbfguNrD9XrDiUsphU7ZAwVEYYwjjODwHV8YifwaaCe2nz4e+gOevXyW0ENrw==">
+      <div class="form-inputs">
+        <div class="form-group email optional user_email"><label class="email optional" for="user_email">Email</label><input class="form-control string email optional" autocomplete="email" autofocus="autofocus" type="email" value="" name="user[email]" id="user_email"></div>
+        <div class="form-group password optional user_password"><label class="password optional" for="user_password">Password</label><input class="form-control password optional" autocomplete="current-password" type="password" name="user[password]" id="user_password"></div>
+        <fieldset class="form-group boolean optional user_remember_me"><div class="form-check"><input name="user[remember_me]" type="hidden" value="0"><input class="form-check-input boolean optional" type="checkbox" value="1" name="user[remember_me]" id="user_remember_me"><label class="form-check-label boolean optional" for="user_remember_me">Remember me</label></div></fieldset>
+      </div>
+
+      <div class="form-actions">
+        <input type="submit" name="commit" value="Log in" class="btn" data-disable-with="Log in">
+      </div>
+
+      <div class="shared">
+
+  <a href="/users/sign_up">Sign up</a><br>
+
+  <a href="/users/password/new">Forgot your password?</a><br>
+
+
+
+
+
+      </div>
+    </form></div>
+  </div>
+</div>
+ -->
