--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,3 +6,22 @@
   text-align: center;
   padding-top: 40vh;
 }
+
+.cards {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+
+.card {
+    width: 200px;
+    border-radius: 3px;
+    text-align: center;
+    padding: 20px;
+    border: 1px solid rgb(230,230,230);
+}
+
+
+.card img {
+    width: 150px;
+}
