--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,55 +1,47 @@
 <div class="home-banner">
-  <h1>Le Wagon</h1>
+  <h1>Hello, I'm Frankie Merckelbach</h1>
   <p>
   <span id="banner-typed-text"></span>
 </p>
 </div>
 
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-6">
-      <%= "Lorem ipsum dolor sit amet, consectetur adipisicing elit " * 100 %>
+      <h1>Le Wagon brings tech skills to creative people!</h1>
+      <p>Change your life and learn to code at one of our campuses around the world.</p>
+      <a class="btn-primary" href="#">Apply now!</a>
     </div>
+
+<div class="container">
+  <div class="row justify-content-center">
+   <div class="container">
+    <h2 class="text-center">How it works</h2>
+    <div class="cards">
+
+      <div class="card">
+        <img src="images/apply.svg" alt="">
+        <h4>Apply</h4>
+        <p>First apply to one of our campuses around the world.</p>
+      </div>
+
+      <div class="card">
+        <img src="images/learn.svg" alt="">
+        <h4>Learn to code</h4>
+        <p>Learn Ruby on Rails, Javascript, SQL &amp; much more!</p>
+      </div>
+
+      <div class="card">
+        <img src="images/product.svg" alt="">
+        <h4>Build products</h4>
+        <p>Finally you will be able to bring your ideas to life.</p>
+      </div>
+
+    </div>
+  </div>
   </div>
 </div>
-<!-- <div class="card-group">
-  <div class="card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-</div> -->
-<!-- <h1>Welcome to my website</h1>
-<p>Today's date is <strong><%= @time %></strong> </p>
 
-<br>
 
-<p>This is your 'homepage' aka your landing page of your whole website</p>
-<p>Your visitor will land on this page if there is nothing behind your URL.com/empty</p>
- -->
+
 <!--
  The contact after action is your param call, it will store information
  for you to use when you call the param in the controller -->
-  <form action="/contact" method="get">
-    <input type="text" name="member" placeholder="Who are you looking for?">
-    <input type="submit">
-  </form>
